--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ spvmcc_build/*
 !spvmcc_build/.gitkeep
 t/test_files_tmp/*
 !t/test_files_tmp/.gitkeep
+t/*/test_files_tmp/*
+!t/*/test_files_tmp/.gitkeep
 t/default/.spvm_build/*
 !t/default/.spvm_build/.gitkeep
 t/exe/.spvm_build/*
