--- a/.github/workflows/linux-ubuntu-latest.yml
+++ b/.github/workflows/linux-ubuntu-latest.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Perl version
         run: perl -V
-      - name: %Config
+      - name: Perl config
         run: perl -MConfig -MData::Dumper -e 'local $Data::Dumper::Sortkeys = 1;warn Dumper \%Config;'
       - name: Set PERL5LIB
         run: echo "PERL5LIB=$HOME/mylib/lib/perl5:$HOME/mylib/lib/perl5/"$(perl -MConfig -e 'print $Config{archname}') >> $GITHUB_ENV
