--- a/.github/workflows/windows-2019.yml
+++ b/.github/workflows/windows-2019.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           echo "PERL5LIB=$HOME/mylib/lib/perl5;'" >> $Env:GITHUB_ENV
           perl -MConfig -e 'print qq(PERL5LIB=$PERL5LIB\$HOME/mylib/lib/perl5/$Config{archname}\n)' >> $Env:GITHUB_ENV
-          echo $env:PERL5LIB
+          echo $Env:PERL5LIB
       - name: Download cpanm
         run: perl -0777 -Mstrict -Mwarnings -MIO::Socket::INET -e 'my $socket = IO::Socket::INET->new(  Proto => qq(tcp),  PeerAddr => qq(cpanmin.us),  PeerPort => 80,) or die $!;print $socket join qq(\r\n),  qq(GET / HTTP/1.1),  qq(Connection:close),  qq(Host:cpanmin.us),  qq(\r\n);my $res = <$socket>;$res =~ s[^HTTP/1\.1 200 OK\r\n.*?\r\n\r\n][]s or die $res;open my $out, qq(>), qq(cpanm) or die $!;print $out $res'
       - name: cpanm installs dependent modules
