The string in the config mode allow "-"
  [New Features]
    * The string in the config mode allow "-"
      Foo.my_mode-azAZ09.config

--- a/t/04_spvmcc/myexe.no_precompile_no_compiler_api.config
+++ b/t/04_spvmcc/myexe.no_precompile_no_compiler_api.config
@@ -4,7 +4,7 @@ use Data::Dumper;
 
 use SPVM::Builder::Config::Exe;
 
-my $config = SPVM::Builder::Config::Exe->load_mode_config(__FILE__, 'no_precompile');
+my $config = SPVM::Builder::Config::Exe->load_mode_config(__FILE__, 'no_precompile-azAZ09');
 
 $config->no_compiler_api(1);
 
