--- a/.github/workflows/linux-ubuntu-latest-perl-5.8.9.yml
+++ b/.github/workflows/linux-ubuntu-latest-perl-5.8.9.yml
@@ -26,6 +26,8 @@ jobs:
         run: echo $PERL5LIB
       - name: Download cpanm
         run: perl -0777 -Mstrict -Mwarnings -MIO::Socket::INET -e 'my $socket = IO::Socket::INET->new(  Proto => qq(tcp),  PeerAddr => qq(cpanmin.us),  PeerPort => 80,) or die $!;print $socket join qq(\r\n),  qq(GET / HTTP/1.1),  qq(Connection:close),  qq(Host:cpanmin.us),  qq(\r\n);my $res = <$socket>;$res =~ m(^HTTP/1\.1 200 OK\r\n) or die $res;$res =~ s/.*?\r\n\r\n//s;open my $out, qq(>), qq(cpanm) or die $!;print $out $res'
+      - name: cpanm installs ExtUtils::MakeMaker
+        run: perl cpanm -v -n -L ~/mylib ExtUtils::MakeMaker
       - name: cpanm installs dependent modules
         run: perl cpanm -v -n -L ~/mylib --installdeps . --configure-args="--meta"
       - name: Show MYMETA.json
