Added the tests of C++ libstdc++.
  [Test Improvement]
    * Added the tests of C++ libstdc++.

--- a/t/02_vm/lib/SPVM/TestCase/NativeAPICpp.config
+++ b/t/02_vm/lib/SPVM/TestCase/NativeAPICpp.config
@@ -4,6 +4,13 @@ use warnings;
 use SPVM::Builder::Config;
 my $config = SPVM::Builder::Config->new_cpp(file => __FILE__);;
 
+if ($^O eq 'MSWin32') {
+  $config->add_static_libs('stdc++', 'winpthread', 'gcc');
+}
+else {
+  $config->add_libs('stdc++');
+}
+
 my @source_files = qw(
   mylib.cpp
 );
