--- a/t/02_vm/lib/SPVM/TestCase/NativeAPICpp.config
+++ b/t/02_vm/lib/SPVM/TestCase/NativeAPICpp.config
@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use SPVM::Builder::Config;
-my $config = SPVM::Builder::Config->new_cpp(file => __FILE__);
+my $config = SPVM::Builder::Config->new_cpp11(file => __FILE__);
 
 $config->add_ccflags('-pthread');
 $config->add_ldflags('-pthread');
