Use ld_optimize in exe config in tests

--- a/t/04_spvmcc/myexe.no_precompile-azAZ09.config
+++ b/t/04_spvmcc/myexe.no_precompile-azAZ09.config
@@ -8,4 +8,6 @@ my $config = SPVM::Builder::Config::Exe->load_base_config(__FILE__);
 
 $config->no_precompile(1);
 
+$config->ld_optimize('-O0');
+
 $config;
