Renamed the global_before_compile field in the SPVM::Builder::Config::Exe to before_each_compile
  [Incompatible Changes]
    * Renamed the global_before_compile field in the SPVM::Builder::Config::Exe to before_each_compile

--- a/t/04_spvmcc/myexe.config
+++ b/t/04_spvmcc/myexe.config
@@ -20,7 +20,7 @@ $config->before_link(sub {
   $main::MYEXE_LINK_INFO = $link_info;
 });
 
-$config->global_before_compile(sub {
+$config->before_each_compile(sub {
   my ($config, $compile_info) = @_;
   
   $main::MYEXE_COMPILE_INFO_GLOBAL_BEFORE_COMPILE ||= $compile_info;
