Don't use deprecated methods

--- a/t/02_vm/lib/SPVM/TestCase/NativeAPI2.config
+++ b/t/02_vm/lib/SPVM/TestCase/NativeAPI2.config
@@ -17,6 +17,6 @@ $config->before_link(sub {
   $main::NATIVE_API2_LINK_INFO = $link_info;
 });
 
-$config->add_source_files('foo.c', 'bar.c', 'baz/baz.c');
+$config->add_source_file('foo.c', 'bar.c', 'baz/baz.c');
 
 $config;
