--- a/t/02_vm/lib/SPVM/TestCase/NativeAPICpp.config
+++ b/t/02_vm/lib/SPVM/TestCase/NativeAPICpp.config
@@ -4,19 +4,19 @@ use warnings;
 use SPVM::Builder::Config;
 my $config = SPVM::Builder::Config->new_cpp11(file => __FILE__);
 
-$config->add_ccflags('-pthread');
-$config->add_ldflags('-pthread');
+$config->add_ccflag('-pthread');
+$config->add_ldflag('-pthread');
 
 if ($^O eq 'MSWin32') {
-  $config->add_static_libs('stdc++', 'winpthread', 'gcc');
+  $config->add_static_lib('stdc++', 'winpthread', 'gcc');
 }
 else {
-  $config->add_libs('stdc++');
+  $config->add_lib('stdc++');
 }
 
 my @source_files = qw(
   mylib.cpp
 );
-$config->add_source_files(@source_files);
+$config->add_source_file(@source_files);
 
 $config;
