--- a/t/02_vm/lib/SPVM/TestCase/Resource/Mylib1/V1_0_0.config
+++ b/t/02_vm/lib/SPVM/TestCase/Resource/Mylib1/V1_0_0.config
@@ -12,7 +12,7 @@ my @source_files = qw(
   mylib1_source2.c
 );
 
-$config->add_source_files(@source_files);
+$config->add_source_file(@source_files);
 
 $config->{_test_base_argv} = \@argv;
 
