--- a/t/02_vm/lib/SPVM/TestCase/Resource/Mylib2/V1_0_0.config
+++ b/t/02_vm/lib/SPVM/TestCase/Resource/Mylib2/V1_0_0.config
@@ -11,6 +11,6 @@ my @source_files = qw(
   mylib2_source1.c
 );
 
-$config->add_source_files(@source_files);
+$config->add_source_file(@source_files);
 
 $config;
