--- a/t/04_spvmcc/lib/SPVM/TestCase/NativeAPI2.config
+++ b/t/04_spvmcc/lib/SPVM/TestCase/NativeAPI2.config
@@ -12,7 +12,7 @@ my @source_files = qw(
   bar.c
   baz/baz.c
 );
-$config->add_source_files(@source_files);
+$config->add_source_file(@source_files);
 
 $config->use_resource('TestCase::Resource::Mylib1::V1_0_0', mode => 'mode1', args => ['args1', 'args2']);
 $config->use_resource('TestCase::Resource::Mylib2::V1_0_0');
