--- a/t/04_spvmcc/myexe.config
+++ b/t/04_spvmcc/myexe.config
@@ -10,9 +10,9 @@ use SPVM::Builder::Config::Exe;
 
 my $config = SPVM::Builder::Config::Exe->new_gnu99(file => __FILE__);
 
-$config->add_lib_dirs('.');
+$config->add_lib_dir('.');
 
-$config->add_libs('m');
+$config->add_lib('m');
 
 $config->before_link(sub {
   my ($config, $link_info) = @_;
