SPVM and standard modules are compiled by C99, not GNU C99 and etc.
  [Changes]
    * SPVM and standard modules are compiled by C99, not GNU C99.
    * The config file that is generated by the spvmcc command use new_c99 instead of new_gnu99.

--- a/t/04_spvmcc/myexe.config
+++ b/t/04_spvmcc/myexe.config
@@ -8,7 +8,7 @@ use lib dirname(__FILE__) . "/../02_vm/lib";
 
 use SPVM::Builder::Config::Exe;
 
-my $config = SPVM::Builder::Config::Exe->new_gnu99(file => __FILE__);
+my $config = SPVM::Builder::Config::Exe->new_c99(file => __FILE__);
 
 $config->add_lib_dir('.');
 
