--- a/lib/SPVM/Env.config
+++ b/lib/SPVM/Env.config
@@ -6,6 +6,6 @@ use strict;
 use warnings;
 use SPVM::Builder::Config;
 
-my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
+my $config = SPVM::Builder::Config->new_c99(file => __FILE__);
 
 $config;
