--- a/t/02_vm/lib/SPVM/TestCase/Resource/Mylib1/V1_0_0.config
+++ b/t/02_vm/lib/SPVM/TestCase/Resource/Mylib1/V1_0_0.config
@@ -4,7 +4,7 @@ use warnings;
 my @argv = @ARGV;
 
 use SPVM::Builder::Config;
-my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);;
+my $config = SPVM::Builder::Config->new_c99(file => __FILE__);;
 
 # C souce files
 my @source_files = qw(
