--- a/t/04_spvmcc/lib/SPVM/MyExe/Foo/Bar.config
+++ b/t/04_spvmcc/lib/SPVM/MyExe/Foo/Bar.config
@@ -3,6 +3,6 @@ use warnings;
 
 use SPVM::Builder::Config::Exe;
 
-my $bconf = SPVM::Builder::Config::Exe->new_gnu99(file => __FILE__);
+my $bconf = SPVM::Builder::Config::Exe->new_c99(file => __FILE__);
 
 $bconf;
