Added the before_compile_cbs fields in the SPVM::Builder::Config class and etc.
  [New Features]
    * Added the before_compile_cbs fields in the SPVM::Builder::Config class.
    * Added the before_each_compile_cbs fields in the SPVM::Builder::Config::Exe class.
    * Added the before_link_cbs fields in the SPVM::Builder::Config class.
  [Incompatible Canges]
    * Removed the before_link method in the SPVM::Builder::Config class. Use add_before_link_cb instead.
    * Removed the before_compile method in the SPVM::Builder::Config class. Use add_before_compile_cb instead.

Added Implement.

--- a/t/04_spvmcc/myexe.config
+++ b/t/04_spvmcc/myexe.config
@@ -14,13 +14,13 @@ $config->add_lib_dir('.');
 
 $config->add_lib('m');
 
-$config->before_link(sub {
+$config->add_before_link_cb(sub {
   my ($config, $link_info) = @_;
   
   $main::MYEXE_LINK_INFO = $link_info;
 });
 
-$config->before_each_compile(sub {
+$config->add_before_each_compile_cb(sub {
   my ($config, $compile_info) = @_;
   
   $main::MYEXE_COMPILE_INFO_GLOBAL_BEFORE_COMPILE ||= $compile_info;
