--- a/t/02_vm/lib/SPVM/TestCase/NativeAPI2.config
+++ b/t/02_vm/lib/SPVM/TestCase/NativeAPI2.config
@@ -11,7 +11,7 @@ if ($ENV{SPVM_TEST_CONFIG_FORCE}) {
   $config->force(1);
 }
 
-$config->before_link(sub {
+$config->add_before_link_cb(sub {
   my ($config, $link_info) = @_;
   
   $main::NATIVE_API2_LINK_INFO = $link_info;
