Cleanup resource tests

--- a/t/02_vm/lib/SPVM/TestCase/UseResource/Mylib2.config
+++ b/t/02_vm/lib/SPVM/TestCase/UseResource/Mylib2.config
@@ -4,8 +4,8 @@ use warnings;
 use SPVM::Builder::Config;
 my $config = SPVM::Builder::Config->new_c99(file => __FILE__);;
 
-$config->use_resource('TestCase::Resource::Mylib1::V1_0_0');
-$config->use_resource('TestCase::Resource::Mylib2::V1_0_0');
+$config->use_resource('TestCase::Resource::Mylib1');
+$config->use_resource('TestCase::Resource::Mylib2');
 
 $main::TEST_USE_RESOURCE_CONFIG = $config;
 
