--- a/t/04_spvmcc/lib/SPVM/TestCase/NativeAPI2.config
+++ b/t/04_spvmcc/lib/SPVM/TestCase/NativeAPI2.config
@@ -14,8 +14,8 @@ my @source_files = qw(
 );
 $config->add_source_file(@source_files);
 
-$config->use_resource('TestCase::Resource::Mylib1::V1_0_0', mode => 'mode1', args => ['args1', 'args2']);
-$config->use_resource('TestCase::Resource::Mylib2::V1_0_0');
+$config->use_resource('TestCase::Resource::Mylib1', mode => 'mode1', args => ['args1', 'args2']);
+$config->use_resource('TestCase::Resource::Mylib2');
 
 $config->add_before_compile_cb(sub {
   my ($config, $compile_info) = @_;
