--- a/t/04_spvmcc/myexe.config
+++ b/t/04_spvmcc/myexe.config
@@ -27,7 +27,7 @@ $config->add_before_each_compile_cb(sub {
 });
 
 
-$config->use_resource('TestCase::Resource::Mylib1::V1_0_0');
-$config->use_resource('TestCase::Resource::Mylib2::V1_0_0');
+$config->use_resource('TestCase::Resource::Mylib1');
+$config->use_resource('TestCase::Resource::Mylib2');
 
 $config;
