--- a/t/02_vm/lib/SPVM/TestCase/UseResource/Mylib1.config
+++ b/t/02_vm/lib/SPVM/TestCase/UseResource/Mylib1.config
@@ -4,6 +4,6 @@ use warnings;
 use SPVM::Builder::Config;
 my $config = SPVM::Builder::Config->new_c99(file => __FILE__);;
 
-$config->use_resource('TestCase::Resource::Mylib1::V1_0_0');
+$config->use_resource('TestCase::Resource::Mylib1');
 
 $config;
