The args field in the SPVM::Builder::Resource is renamed to the argv field.
  [Incompatible Canges]
    * The args field in the SPVM::Builder::Resource is renamed to the argv field.

--- a/t/02_vm/lib/SPVM/TestCase/UseResource/Basic.config
+++ b/t/02_vm/lib/SPVM/TestCase/UseResource/Basic.config
@@ -6,7 +6,7 @@ use SPVM::Builder::Resource;
 
 my $config = SPVM::Builder::Config->new_c99(file => __FILE__);;
 
-$config->use_resource('TestCase::Resource::Mylib1', mode => 'mode1', args => ['args1', 'args2']);
+$config->use_resource('TestCase::Resource::Mylib1', mode => 'mode1', argv => ['args1', 'args2']);
 
 my $resource = $config->get_resource('TestCase::Resource::Mylib1');
 
