--- a/t/04_spvmcc/lib/SPVM/TestCase/NativeAPI2.config
+++ b/t/04_spvmcc/lib/SPVM/TestCase/NativeAPI2.config
@@ -14,7 +14,7 @@ my @source_files = qw(
 );
 $config->add_source_file(@source_files);
 
-$config->use_resource('TestCase::Resource::Mylib1', mode => 'mode1', args => ['args1', 'args2']);
+$config->use_resource('TestCase::Resource::Mylib1', mode => 'mode1', argv => ['args1', 'args2']);
 $config->use_resource('TestCase::Resource::Mylib2');
 
 $config->add_before_compile_cb(sub {
