--- a/t/04_spvmcc/myexe.debug.config
+++ b/t/04_spvmcc/myexe.debug.config
@@ -9,7 +9,7 @@ my $config = SPVM::Builder::Config::Exe->load_base_config(__FILE__);
 $config->add_before_each_compile_cb(sub {
   my ($config, $compile_info) = @_;
   
-  $compile_info->optimize('-O0 -g');
+  $config->optimize('-O0 -g');
 });
 
 $config;
