Increment operator of varaible is created in op.c

--- a/solo/myexe.debug.config
+++ b/solo/myexe.debug.config
@@ -3,8 +3,11 @@ use warnings;
 
 use SPVM::Builder::Config::Exe;
 
-my $config = SPVM::Builder::Config::Exe->load_base_config(__FILE__);
+my $exe_config = SPVM::Builder::Config::Exe->load_base_config(__FILE__);
 
-$config->optimize("-O0 -g");
+$exe_config->config_spvm_core->optimize("-O0 -g");
 
-$config;
+$exe_config->quiet(0);
+$exe_config->force(1);
+
+$exe_config;
