Debug run - Print memory count is fixed

--- a/solo/myexe.debug_memory_count.config
+++ b/solo/myexe.debug_memory_count.config
@@ -6,6 +6,6 @@ use SPVM::Builder::Config::Exe;
 
 my $config = SPVM::Builder::Config::Exe->load_mode_config(__FILE__, 'debug');
 
-$config->add_ccflags('-DSPVM_DEBUG_MEMORY');
+$config->config_spvm_core->add_ccflag('-DSPVM_DEBUG_MEMORY');
 
 $config;
