Implement create_seed with OS secure random and add bcrypt library to Hash.config for Windows.

--- a/lib/SPVM/Hash.config
+++ b/lib/SPVM/Hash.config
@@ -8,4 +8,8 @@ use warnings;
 use SPVM::Builder::Config;
 my $config = SPVM::Builder::Config->new_gnu99;;
 
+if ($^O eq 'MSWin32') {
+  $config->add_lib('bcrypt');
+}
+
 $config;
