--- a/t/04_spvmcc/script/spvm-archive.config
+++ b/t/04_spvmcc/script/spvm-archive.config
@@ -4,6 +4,6 @@ my $config_exe = SPVM::Builder::Config::Exe->new;
 
 my $config_dir = dirname __FILE__;
 
-$config_exe->use_spvm_archive("$config_dir/../.spvm_build/.tmp/spvm-archive-myapp", {skip => ['TestCase::Precompile']});
+$config_exe->use_spvm_archive("$config_dir/../.spvm_build/.tmp/spvm-archive-myapp");
 
 $config_exe;
