Use new_c99 instead of new_gnu99 in config files for MSVC support.

--- a/lib/SPVM/Fn.config
+++ b/lib/SPVM/Fn.config
@@ -2,7 +2,7 @@
 # Copyright 2023 Yuki Kimoto. All Rights Reserved.
 # MIT License.
 
-my $config = SPVM::Builder::Config->new_gnu99;;
+my $config = SPVM::Builder::Config->new_c99;;
 
 if ($^O eq 'MSWin32') {
   $config->add_lib('bcrypt');
