--- a/lib/SPVM/Format.config
+++ b/lib/SPVM/Format.config
@@ -6,6 +6,6 @@ use strict;
 use warnings;
 
 use SPVM::Builder::Config;
-my $config = SPVM::Builder::Config->new_gnu99;;
+my $config = SPVM::Builder::Config->new_c99;;
 
 $config;
