--- a/lib/SPVM/Hash.config
+++ b/lib/SPVM/Hash.config
@@ -6,7 +6,7 @@ use strict;
 use warnings;
 
 use SPVM::Builder::Config;
-my $config = SPVM::Builder::Config->new_gnu99;;
+my $config = SPVM::Builder::Config->new_c99;;
 
 if ($^O eq 'MSWin32') {
   $config->add_lib('bcrypt');
