--- a/lib/SPVM/Native.config
+++ b/lib/SPVM/Native.config
@@ -5,6 +5,6 @@ use strict;
 use warnings;
 use SPVM::Builder::Config;
 
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_c99;
 
 $config;
