Add C++ tests to spvmcc.

--- a/t/04_spvmcc/script/spvm-archive-static-lib.config
+++ b/t/04_spvmcc/script/spvm-archive-static-lib.config
@@ -8,4 +8,13 @@ $config_exe->use_spvm_archive("$config_dir/../.spvm_build/.tmp/spvm-archive-myap
 
 $config_exe->add_lib('spvmcc_archive_test');
 
+$config_exe->add_ldflag('-pthread');
+
+if ($^O eq 'MSWin32') {
+  $config_exe->add_static_lib('stdc++', 'winpthread', 'gcc');
+}
+else {
+  $config_exe->add_lib('stdc++');
+}
+
 $config_exe;
