--- a/t/04_spvmcc/script/myapp.config
+++ b/t/04_spvmcc/script/myapp.config
@@ -21,6 +21,15 @@ $ENV{SPVM__TEST__MYAPP__EXE} = 1;
 $config_exe->use_resource('TestCase::Resource::Mylib1');
 $config_exe->use_resource('TestCase::Resource::Mylib2');
 
+$config_exe->add_ldflag('-pthread');
+
+if ($^O eq 'MSWin32') {
+  $config_exe->add_static_lib('stdc++', 'winpthread', 'gcc');
+}
+else {
+  $config_exe->add_lib('stdc++');
+}
+
 if (@ARGV) {
   warn "[Test Output]\@ARGV : @ARGV";
 }
