--- a/t/04_spvmcc/script/spvm-archive.config
+++ b/t/04_spvmcc/script/spvm-archive.config
@@ -6,4 +6,13 @@ my $config_dir = dirname __FILE__;
 
 $config_exe->use_spvm_archive("$config_dir/../.spvm_build/.tmp/spvm-archive-myapp");
 
+$config_exe->add_ldflag('-pthread');
+
+if ($^O eq 'MSWin32') {
+  $config_exe->add_static_lib('stdc++', 'winpthread', 'gcc');
+}
+else {
+  $config_exe->add_lib('stdc++');
+}
+
 $config_exe;
