Abstract thread flags and winpthread static linking into SPVM::Builder::Config.

--- a/t/02_vm/lib/SPVM/TestCase/NativeAPICpp.config
+++ b/t/02_vm/lib/SPVM/TestCase/NativeAPICpp.config
@@ -4,11 +4,8 @@ use warnings;
 use SPVM::Builder::Config;
 my $config = SPVM::Builder::Config->new_cpp11;
 
-$config->add_ccflag('-pthread');
-$config->add_ldflag('-pthread');
-
 if ($^O eq 'MSWin32') {
-  $config->add_static_lib('stdc++', 'winpthread', 'gcc');
+  $config->add_static_lib('stdc++', 'gcc');
 }
 else {
   $config->add_lib('stdc++');
