* SPVM::Builder::Config: Remove new_gnu99 and new_gnu11 method,       because Enforce C99 as the default C language standard for the entire SPVM ecosystem to improve portability and fix the actual standard from GNU99 to C99.       Add a note for Linux users: If some functions like lstat are not found when using the C99 standard,       insert the following code at the beginning of the C source file:     * Update spvmdist to use the new_c99 method by default in the generated       native class configuration files to enforce the C99 standard for new modules.

--- a/t/02_vm/lib/SPVM/TestCase/NativeAPI.config
+++ b/t/02_vm/lib/SPVM/TestCase/NativeAPI.config
@@ -1,4 +1,4 @@
-my $config = SPVM::Builder::Config->new_gnu99;;
+my $config = SPVM::Builder::Config->new_c99;;
 
 # Check if utf8 pragma is enabled
 {
