--- a/t/02_vm/lib/SPVM/TestCase/NativeAPISrc.config
+++ b/t/02_vm/lib/SPVM/TestCase/NativeAPISrc.config
@@ -3,7 +3,7 @@ use warnings;
 
 use SPVM::Builder::Config;
 
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_c99;
 
 # Do not removed. This is used in t/02_vm/06_native_api/native_api_cached.t.
 if ($ENV{SPVM_TEST_CONFIG_FORCE}) {
