--- a/t/02_vm/lib/SPVM/TestCase/UseResource/Basic.config
+++ b/t/02_vm/lib/SPVM/TestCase/UseResource/Basic.config
@@ -4,7 +4,7 @@ use warnings;
 use SPVM::Builder::Config;
 use SPVM::Builder::Resource;
 
-my $config = SPVM::Builder::Config->new_gnu99;;
+my $config = SPVM::Builder::Config->new_c99;;
 
 $ENV{SPVM__TestCase__Resource__Mylib1__ARGV1} = 'args1';
 
