--- a/t/02_vm/lib/SPVM/TestCase/Module/Fn.config
+++ b/t/02_vm/lib/SPVM/TestCase/Module/Fn.config
@@ -5,6 +5,6 @@ use strict;
 use warnings;
 use SPVM::Builder::Config;
 
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_c99;
 
 $config;
