--- a/t/02_vm/lib/SPVM/TestCase/Resource/Mylib2.config
+++ b/t/02_vm/lib/SPVM/TestCase/Resource/Mylib2.config
@@ -4,7 +4,7 @@ use warnings;
 my @argv = @ARGV;
 
 use SPVM::Builder::Config;
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_c99;
 
 $config->is_resource(1);
 
