--- a/t/02_vm/lib/SPVM/TestCase/UseResource/Mylib1.config
+++ b/t/02_vm/lib/SPVM/TestCase/UseResource/Mylib1.config
@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use SPVM::Builder::Config;
-my $config = SPVM::Builder::Config->new_gnu99;;
+my $config = SPVM::Builder::Config->new_c99;;
 
 $config->use_resource('TestCase::Resource::Mylib1');
 
