--- a/t/04_spvmcc/lib/SPVM/TestCase/ExternalFunction.config
+++ b/t/04_spvmcc/lib/SPVM/TestCase/ExternalFunction.config
@@ -5,7 +5,7 @@ use strict;
 use warnings;
 use SPVM::Builder::Config;
 
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_c99;
 
 
 
