--- a/t/04_spvmcc/lib/SPVM/TestCase/NativeAPI2.config
+++ b/t/04_spvmcc/lib/SPVM/TestCase/NativeAPI2.config
@@ -3,7 +3,7 @@ use warnings;
 
 use SPVM::Builder::Config;
 
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_c99;
 
 $config->optimize('-O2');
 
